--- a/css/styles.css
+++ b/css/styles.css
@@ -216,10 +216,7 @@ img {
 
 /* Theme Toggle */
 .theme-toggle {
-    position: fixed;
-    top: 20px;
-    right: 24px;
-    z-index: 9999;
+    position: relative;
     width: 40px;
     height: 40px;
     border-radius: 50%;
